5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1577_579.log
== TEST (2019-03-26 18:05:44) 
-- CODE:
print("A UFAM tem", 2016 - 107, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:05:55) 
-- CODE:
print("A UFAM tem", 2016 - 107, "anos de fundacao")
-- EXECUTION TIME:
0.137615
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 1909 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:06) 
-- CODE:
print("A UFAM tem", 2016, "anos de fundacao")
-- OUTPUT:
A UFAM tem 2016 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:16) 
-- CODE:
print("A UFAM tem", 107, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:06:19) 
-- CODE:
print("A UFAM tem", 107, "anos de fundacao")
-- EXECUTION TIME:
0.121354
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:06:43) 
-- CODE:
print("A UFAM tem", 2018 - 107, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1911 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:11) 
-- CODE:
print("A UFAM tem", 2016 - 1009, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1007 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:16) 
-- CODE:
print("A UFAM tem", 2016 - 109, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1907 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:21) 
-- CODE:
print("A UFAM tem", 2016 - 1009, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1007 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:25) 
-- CODE:
print("A UFAM tem", 2016 - 109, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1907 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:29) 
-- CODE:
print("A UFAM tem", 2016 - 19, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1997 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:36) 
-- CODE:
print("A UFAM tem", 2016 - 109, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1907 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:44) 
-- CODE:
print("A UFAM tem", 2016 - 109, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1907 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:49) 
-- CODE:
print("A UFAM tem", 2016 - 09, "anos de fundacao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 09, "anos de fundacao")
                                ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:53) 
-- CODE:
print("A UFAM tem", 2016 - 09, "anos de fundacao")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 09, "anos de fundacao")
                                ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:07:57) 
-- CODE:
print("A UFAM tem", 2016 - 9, "anos de fundacao")
-- OUTPUT:
A UFAM tem 2007 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:04) 
-- CODE:
print("A UFAM tem", 2016 - 109, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1907 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:10) 
-- CODE:
print("A UFAM tem", 2016 - 100, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1916 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:16) 
-- CODE:
print("A UFAM tem", 2016 - 1000, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1016 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:20) 
-- CODE:
print("A UFAM tem", 2016 - 10000, "anos de fundacao")
-- OUTPUT:
A UFAM tem -7984 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:40) 
-- CODE:
print("A UFAM tem", 2019 - 110, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:47) 
-- CODE:
print("A UFAM tem", 2017 - 110, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1907 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:08:55) 
-- CODE:
print("A UFAM tem", 2019 - 110, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:01) 
-- CODE:
print("A UFAM tem", 219 - 110, "anos de fundacao")
-- OUTPUT:
A UFAM tem 109 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:12) 
-- CODE:
print("A UFAM tem", 219 - 18, "anos de fundacao")
-- OUTPUT:
A UFAM tem 201 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:22) 
-- CODE:
print("A UFAM tem", 219 - 108, "anos de fundacao")
-- OUTPUT:
A UFAM tem 111 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:32) 
-- CODE:
print("A UFAM tem", 219 - 106, "anos de fundacao")
-- OUTPUT:
A UFAM tem 113 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:40) 
-- CODE:
print("A UFAM tem", 219 - 103, "anos de fundacao")
-- OUTPUT:
A UFAM tem 116 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:46) 
-- CODE:
print("A UFAM tem", 219 - 109, "anos de fundacao")
-- OUTPUT:
A UFAM tem 110 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:50) 
-- CODE:
print("A UFAM tem", 219 - 108, "anos de fundacao")
-- OUTPUT:
A UFAM tem 111 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:09:57) 
-- CODE:
print("A UFAM tem", 219 - 111, "anos de fundacao")
-- OUTPUT:
A UFAM tem 108 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:10:02) 
-- CODE:
print("A UFAM tem", 219 - 112, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:10:06) 
-- CODE:
print("A UFAM tem", 219 - 112, "anos de fundacao")
-- EXECUTION TIME:
0.171807
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:10:32) 
-- CODE:
print("A UFAM tem", 219 - 112, "anos de fundacao")
-- EXECUTION TIME:
0.156549
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:10:36) 
-- CODE:
print("A UFAM tem", 219 - 112, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:10:46) 
-- CODE:
print("A UFAM tem", 2016 - 112, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1904 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:00) 
-- CODE:
print("A UFAM tem", 2016 - 112, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1904 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:06) 
-- CODE:
print("A UFAM tem", 2016 - 12, "anos de fundacao")
-- OUTPUT:
A UFAM tem 2004 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:13) 
-- CODE:
print("A UFAM tem", 2016 - 112, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1904 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:21) 
-- CODE:
print("A UFAM tem", 2016 - 115, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1901 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:25) 
-- CODE:
print("A UFAM tem", 2016 - 112, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1904 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:36) 
-- CODE:
print("A UFAM tem", 2016 - 1112, "anos de fundacao")
-- OUTPUT:
A UFAM tem 904 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:45) 
-- CODE:
print("A UFAM tem", 2016 - 128, "anos de fundacao")
-- OUTPUT:
A UFAM tem 1888 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:14:58) 
-- CODE:
print("A UFAM tem", 2016 - 1808, "anos de fundacao")
-- OUTPUT:
A UFAM tem 208 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:07) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:15:10) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.11828
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:22) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:31) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:15:32) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.199057
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:15:32) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.140329
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:33) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:38) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao ")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:15:41) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao ")
-- EXECUTION TIME:
0.113072
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:41) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao ")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:15:45) 
-- CODE:
print( "A UFAM tem", 2016 - 1909, "anos de fundacao ")
-- EXECUTION TIME:
0.128574
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:15:51) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.153977
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:52) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:54) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:15:55) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- EXECUTION TIME:
0.146995
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:55) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:16:16) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.225009
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:12:10) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.151497
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:12:11) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.121547
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:46:56) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:47:18) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:47:26) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.144611
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:47:34) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:47:44) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.123477
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
